--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     ></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/style_contact.css" />
+    <link rel="stylesheet" href="./style_contact.css" />
     <title>WEB DEB ARG | Diseño & Desarrollo Web</title>
 </head>
 <body>
@@ -73,7 +73,7 @@
             </form>
             
             <div class="img-contact">
-                <img src="/img/contact.svg" alt="contacto-servicio">
+                <img src="./img/contact.svg" alt="contacto-servicio">
                 <div class="datos-contacto">
                     <span>Email:</span>
                     <p>webarginfo@gmail.com</p>
@@ -85,7 +85,7 @@
     <section class="footer">
         <div class="datos-footer">
             <div class="dato-footer">
-                <img src="/img/web-logo-design.svg" alt="logo-webdevarg"> 
+                <img src="./img/web-logo-design.svg" alt="logo-webdevarg"> 
                 <h3>Web Dev Arg</h3>
             </div>
             <p>webarginfo@gmail.com</p>
