Updated Nosotros and Servicios

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <a href="/contact.html">¡CONTACTANOS!</a>
         </div>
         <div class="hero-img">
-          <img src="./img/hero.svg" alt="webdevarg-hero" />
+          <img src="./img/hero.png" alt="webdevarg-hero" />
         </div>
       </div>
       <img src="./img/wavestart.png" />
@@ -107,11 +107,11 @@
         </div>
         <div class="cards">
           <div class="card">
-            <img src="./img/chart.svg" alt="analisis-gráfico" />
-            <h3>Google Analytics</h3>
+            <img src="./img/code.svg" alt="analisis-gráfico" />
+            <h3>100% Codigo</h3>
             <p>
-              Tu sitio tendrá Google Analytics para poder visualizar el tráfico
-              en tu sitio y ver su origen.
+              Tu sitio web sera hecho con codigo en su totalidad. Esto atrae
+              beneficios como mayor personalización y de optimización.
             </p>
           </div>
           <div class="card">
@@ -131,25 +131,31 @@
             </p>
           </div>
         </div>
-        <img src="/img/fondo1.png" />
+        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
+          <path
+            fill="#00B4D8"
+            d="M37.3,-62.6C45.6,-52.6,47.8,-37.7,49.6,-25.2C51.5,-12.6,53,-2.4,56.5,11.7C60,25.7,65.4,43.6,60.4,56C55.3,68.4,39.7,75.3,24.4,77.2C9,79.1,-6.2,75.9,-20.6,71.2C-35,66.4,-48.6,60.2,-60.6,50.3C-72.6,40.4,-83,26.9,-84.9,12.3C-86.9,-2.3,-80.2,-17.9,-68.5,-26.2C-56.8,-34.4,-40,-35.2,-27.7,-43.4C-15.4,-51.6,-7.7,-67.1,3.4,-72.3C14.5,-77.6,28.9,-72.6,37.3,-62.6Z"
+            transform="translate(100 100)"
+          />
+        </svg>
       </section>
       <section class="descripcion" id="servicios">
         <div class="wrapper">
           <div class="descripcion-imagen">
-            <img src="./img/cerdo.svg" alt="plata-chancho-servicios" />
+            <img src="./img/dashboard.svg" alt="plata-chancho-servicios" />
           </div>
           <div class="descripcion-text">
             <div class="descripcion-precio">
-              <h2><span>$0</span> Primer Pago, <span>$2200</span> Por Mes</h2>
+              <h2>NUESTROS <span>SERVICIOS</span></h2>
               <p>
-                $0 por un sitio estandar con 3 páginas para pequeños
-                emprendimientos en busca de inserción en internet. Si necesitas
-                más que eso podemos hacer un precio personalizado de acuerdo al
-                trabajo, número de páginas adicionales y tiempo involucrado.
+                Nos encargamos de insertar tu negocio en Internet. Si nunguno de
+                nuestros planes se acomoda a lo que necesitas, podemos hacer un
+                precio personalziado de acuerdo al trabajo, número de páginas
+                adicionales y tiempo involucrado.
               </p>
               <p>
-                Tu propio dominio, contenido y perfiles. Cancela cuando quieras
-                sin recargos.
+                Tu propio dominio y contenido. Cancela cuando quieras sin
+                cargos.
               </p>
             </div>
             <div class="caracteristicas">
@@ -157,28 +163,24 @@
                 <div class="tarjetas">
                   <i class="fas fa-check"></i>
                   <h4>Cuota de Hosting Incluida</h4>
-                  <p>Las cuotas del hosting estan incluidas en el precio.</p>
+                  <p>El primer año de hoisting incluido en la cuota.</p>
                 </div>
                 <div class="tarjetas">
                   <i class="fas fa-check"></i>
-                  <h4>Servicio al Cliente 24/7</h4>
-                  <p>
-                    Contactanos cualquier día y responderemos a la brevedad.
-                  </p>
+                  <h4>Mantenimiento gratis</h4>
+                  <p>Hasta 6 horas mensuales de mantenimiento gratis.</p>
                 </div>
               </div>
               <div class="caracteristicas-2">
                 <div class="tarjetas">
                   <i class="fas fa-check"></i>
-                  <h4>Ediciones Ilimitadas</h4>
-                  <p>
-                    Cambia lo que quieras cuando quieras y sera hecho ese día.
-                  </p>
+                  <h4>Revisiones gratis</h4>
+                  <p>Hasta 3 revisiones gratis sobre el diseño.</p>
                 </div>
                 <div class="tarjetas">
                   <i class="fas fa-check"></i>
-                  <h4>Diseño Web y Desarrollo</h4>
-                  <p>Más de 30 horas de diseño y desarrollo.</p>
+                  <h4>Entrega de archivos</h4>
+                  <p>Entrega de archivos en todos los formatos.</p>
                 </div>
               </div>
             </div>
