--- a/index.html
+++ b/index.html
@@ -161,26 +161,42 @@
             <div class="caracteristicas">
               <div class="caracteristicas-1">
                 <div class="tarjetas">
-                  <i class="fas fa-check"></i>
-                  <h4>Cuota de Hosting Incluida</h4>
-                  <p>El primer año de hoisting incluido en la cuota.</p>
+                  <div class="icon-wrapper">
+                    <i class="fas fa-check"></i>
+                  </div>
+                  <div class="card-wrapper">
+                    <h4>Cuota de Hosting Incluida</h4>
+                    <p>El primer año de hoisting incluido en la cuota.</p>
+                  </div>
                 </div>
                 <div class="tarjetas">
-                  <i class="fas fa-check"></i>
-                  <h4>Mantenimiento gratis</h4>
-                  <p>Hasta 6 horas mensuales de mantenimiento gratis.</p>
+                  <div class="icon-wrapper">
+                    <i class="fas fa-check"></i>
+                  </div>
+                  <div class="card-wrapper">
+                    <h4>Mantenimiento gratis</h4>
+                    <p>Hasta 6 horas mensuales de mantenimiento gratis.</p>
+                  </div>
                 </div>
               </div>
               <div class="caracteristicas-2">
                 <div class="tarjetas">
-                  <i class="fas fa-check"></i>
-                  <h4>Revisiones gratis</h4>
-                  <p>Hasta 3 revisiones gratis sobre el diseño.</p>
+                  <div class="icon-wrapper">
+                    <i class="fas fa-check"></i>
+                  </div>
+                  <div class="card-wrapper">
+                    <h4>Revisiones gratis</h4>
+                    <p>Hasta 3 revisiones gratis sobre el diseño.</p>
+                  </div>
                 </div>
                 <div class="tarjetas">
-                  <i class="fas fa-check"></i>
-                  <h4>Entrega de archivos</h4>
-                  <p>Entrega de archivos en todos los formatos.</p>
+                  <div class="icon-wrapper">
+                    <i class="fas fa-check"></i>
+                  </div>
+                  <div class="card-wrapper">
+                    <h4>Entrega de archivos</h4>
+                    <p>Entrega de archivos en todos los formatos.</p>
+                  </div>
                 </div>
               </div>
             </div>
