--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <p class="hero-subtext-2">
             Ofrecemos páginas web escritas 100% con código.
           </p>
-          <a href="/contact.html">¡CONTACTANOS!</a>
+          <a class="custom-btn btn" href="/contact.html">¡CONTACTANOS!</a>
         </div>
         <div class="hero-img">
           <img src="./img/hero.png" alt="webdevarg-hero" />
