Style cards portfolio

--- a/index.html
+++ b/index.html
@@ -205,55 +205,116 @@
       </section>
       <section class="portfolio" id="portfolio">
         <h2><span>Nuestro</span> Portfolio</h2>
-        <div class="cards-port">
-          <div class="card-port">
-            <div class="container">
-              <img src="./img/travelly.jpg" alt="travelly-sitio-web" />
+        <div class="portfolio-container">
+          <div class="card-wrap">
+            <div class="card-header">
+              <img src="./img/travelly.jpg" alt="travelly sitio web" />
             </div>
-            <h5>Travelly</h5>
-            <span>Viajes</span>
-            <p>
-              Este es un ejemplo de empresa de viajes donde puedes mostrar y
-              describir tus servicios.
-            </p>
-            <a
-              href="https://flamboyant-stonebraker-5071eb.netlify.app/"
-              target="_blank"
-              >Visitar Travelly</a
-            >
+            <div class="card-content">
+              <h1 class="card-title">Travelly</h1>
+              <p class="card-text">
+                Este es un ejemplo de empresa de viajes donde puedes mostrar y
+                describir tus servicios.
+              </p>
+              <a
+                class="card-btn"
+                href="https://flamboyant-stonebraker-5071eb.netlify.app/"
+                target="_blank"
+                >Visitar Página</a
+              >
+            </div>
           </div>
-          <div class="card-port">
-            <div class="container">
+          <div class="card-wrap">
+            <div class="card-header">
               <img src="./img/portfolio.JPG" alt="portfolio-sitio-web" />
             </div>
-            <h5>Portfolio</h5>
-            <span>Trabajo</span>
-            <p>
-              Un ejemplo de un portfolio personal para poder ser presentado en
-              una empresa y lucir tus proyectos.
-            </p>
-            <a href="https://quirky-leavitt-bf462b.netlify.app" target="_blank"
-              >Visitar Portfolio</a
-            >
+            <div class="card-content">
+              <h1 class="card-title">Portfolio</h1>
+              <p class="card-text">
+                Un ejemplo de un portfolio personal para poder ser presentado en
+                una empresa y lucir tus proyectos.
+              </p>
+              <a
+                class="card-btn"
+                href="https://quirky-leavitt-bf462b.netlify.app"
+                target="_blank"
+                >Visitar Página</a
+              >
+            </div>
           </div>
-          <div class="card-port">
-            <div class="container">
+          <div class="card-wrap">
+            <div class="card-header">
               <img src="./img/elena-joy.jpg" alt="elena-sitio-web" />
             </div>
-            <h5>Galeria</h5>
-            <span>Fotos</span>
-            <p>
-              Es un sitio web de una fotógrafa donde muestra sus trabajos para
-              tener más alcance con sus proyectos.
-            </p>
-            <a
-              href="https://adoring-lumiere-74f092.netlify.app/"
-              target="_blank"
-              >Visitar Galeria</a
-            >
+            <div class="card-content">
+              <h1 class="card-title">Galeria</h1>
+              <p class="card-text">
+                Sitio web de una fotógrafa donde muestra sus trabajos para tener
+                más alcance con sus proyectos.
+              </p>
+              <a
+                class="card-btn"
+                href="https://adoring-lumiere-74f092.netlify.app/"
+                target="_blank"
+                >Visitar Página</a
+              >
+            </div>
+          </div>
+          <div class="card-wrap">
+            <div class="card-header">
+              <img src="./img/argen-steam.png" alt="elena-sitio-web" />
+            </div>
+            <div class="card-content">
+              <h1 class="card-title">ArgenSteam</h1>
+              <p class="card-text">
+                Sitio web e-commerce de video juegos donde se muestran los
+                productos y la funcionalidad de un carrito
+              </p>
+              <a
+                class="card-btn"
+                href="https://argensteam.netlify.app/"
+                target="_blank"
+                >Visitar Página</a
+              >
+            </div>
+          </div>
+          <div class="card-wrap">
+            <div class="card-header">
+              <img src="./img/movie-search.png" alt="elena-sitio-web" />
+            </div>
+            <div class="card-content">
+              <h1 class="card-title">Movie Finder</h1>
+              <p class="card-text">
+                Sitio web de busqueda de películas por nombre y año para obtener
+                información de la misma
+              </p>
+              <a
+                class="card-btn"
+                href="https://simbuscadorpeliculas.netlify.app/"
+                target="_blank"
+                >Visitar Página</a
+              >
+            </div>
+          </div>
+          <div class="card-wrap">
+            <div class="card-header">
+              <img src="./img/react-meals.png" alt="elena-sitio-web" />
+            </div>
+            <div class="card-content">
+              <h1 class="card-title">Meals</h1>
+              <p class="card-text">
+                Sitio web de restaurante donde puedes pedir comida y agregarla
+                al carrito para futura compra
+              </p>
+              <a
+                class="card-btn"
+                href="https://meals-react.netlify.app/"
+                target="_blank"
+                >Visitar Página</a
+              >
+            </div>
           </div>
         </div>
-        <img src="./img/fondo2.png" />
       </section>
       <section class="prices">
         <div class="precios">
